--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Calmcl1.GitHub.io
+title: Cal McLean - on GitHub!
 description: 
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
 
 gems:
