--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cal McLean - on GitHub!
+title: [Cal McLean - on GitHub](//calmcl1.github.io)!
 description: 
 google_analytics: 
 show_downloads: false
