you like coffee? i like coffee.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: [Cal McLean - on GitHub](//calmcl1.github.io)!
-description: 
+description: [I'm Cal](//calmcl1.github.io) - a vision mixer with too much time.
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-minimal
