--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Cal McLean - on GitHub!
 description: I'm Cal - a vision mixer with too much time.
-google_analytics: 
+google_analytics: UA-49531593-2
 show_downloads: false
 theme: jekyll-theme-minimal
 
