--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,93 @@
-title: Cal McLean - on GitHub!
-description: I'm Cal - a vision mixer with too much time.
-google_analytics: UA-49531593-2
-show_downloads: false
-theme: jekyll-theme-minimal
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 
-gems:
-  - jekyll-mentions
-  - jekyll-redirect-from
+title: Cal McLean
+email: mail@callum-mclean.co.uk
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "callum-mclean.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: cal_mclean
+github_username: calmcl1
+repository: "calmcl1/calmcl1.github.io"
+author:
+  name: Cal McLean
+
+# Build settings
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+# theme: minimal-mistakes-jekyll
+# theme: minima
+plugins:
+  # - jekyll-feed
+  - jekyll-include-cache
+
+domain: callum.mclean.co.uk
+
+# Theme configuration
+minimal_mistakes_skin: "neon"
+site.locale: "en-GB"
+
+atom_feed: # Don't show the auto-generated RSS feed link
+  hide: true
+
+defaults:
+  - scope:
+      path: "" # an empty string here means all files in the project
+      type: "pages" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "single"
+  - scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "single"
+
+footer:
+  links:
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://linkedin.com/in/calmclean"
+    - label: "BlueSky"
+      icon: "fab fa-fw fa-square-bluesky"
+      url: "https://bsky.app/profile/calmclean.bsky.social"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-square-github"
+      url: "https://github.com/calmcl1"
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
