--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "callum-mclean.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://callum-mclean.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cal_mclean
 github_username: calmcl1
 repository: "calmcl1/calmcl1.github.io"
@@ -41,6 +41,8 @@ plugins:
   - jekyll-include-cache
 
 domain: callum.mclean.co.uk
+
+markdown: kramdown
 
 # Theme configuration
 minimal_mistakes_skin: "neon"
